<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#03254c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/SC_logo"/>

    <TextView
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:textSize="38sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:hintEnabled="true"
        app:boxStrokeColor="@color/teal_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:maxLines="1"
            android:background="@color/white"
            android:hint="@string/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/teal_200"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:maxLines="1"
            android:id="@+id/password"
            android:hint="@string/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/ps__button_paypal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/create_acc"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>